# Second-level Makefile.am for CoFlo, ./debug_utils directory.
#
# Copyright 2011, 2012 Gary R. Van Sickle (grvs@users.sourceforge.net).
#
# This file is part of CoFlo.
#
# CoFlo is free software: you can redistribute it and/or modify it under the
# terms of version 3 of the GNU General Public License as published by the Free
# Software Foundation.
#
# CoFlo is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE.  See the GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along with
# CoFlo.  If not, see <http://www.gnu.org/licenses/>.


noinst_LIBRARIES = libdebugutils.a
libdebugutils_a_SOURCES = debug_utils.cpp debug_utils.hpp coflo_exceptions.hpp

libdebugutils_a_CPPFLAGS = $(AM_CPPFLAGS)
libdebugutils_a_CFLAGS = $(AM_CFLAGS)
libdebugutils_a_CXXFLAGS = $(AM_CXXFLAGS)
